[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fora/version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
strict_equality = true
show_error_codes = true
show_traceback = true
pretty = true
no_implicit_reexport = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39
"""
