[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fora/version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
strict_equality = true
show_error_codes = true
show_traceback = true
pretty = true
no_implicit_reexport = true

[tool.pylint.'MESSAGES CONTROL']
ignore = "version.py"
disable = "fixme, line-too-long, invalid-name, too-many-instance-attributes, too-few-public-methods, too-many-arguments, too-many-locals, duplicate-code"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39,pylint,type,docs

[testenv]
deps = -rrequirements-test.txt

[testenv:pylint]
deps = pylint
description = check with pylint
basepython = python3.9
commands = pylint src/fora

[testenv:type]
deps = mypy
description = type-check with mypy
basepython = python3.9
commands =
    python -m mypy src/fora

[testenv:docs]
deps = pdoc
description = check if docs can be built
basepython = python3.9
commands = {toxworkdir}/docs/make.py
"""
