[metadata]
name = simple_automation
author = oddlama
author-email = oddlama@oddlama.org
maintainer = oddlama
maintainer-email = oddlama@oddlama.org
summary = A simple infrastructure and configuration management tool
description-file = README.md
home-page = https://github.com/oddlama/simple_automation
license = MIT
python_requires = >=3.9
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    infrastructure
    deployment
    config
    configuration
    management
    tool

[options]
zip_safe = True

[files]
packages =
    simple_automation

[bdist_wheel]
universal = 0
