[metadata]
name = fora
author = oddlama
author_email = oddlama@oddlama.org
description = A simple infrastructure and configuration management tool
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://oddlama.github.io/fora
project_urls =
    Documentation = https://oddlama.github.io/fora
    Source = https://github.com/oddlama/fora
    Issues = https://github.com/oddlama/fora/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords = ansible, configuration, deploy, deployment, infra, infrastructure, management, puppet, saltstack, config, fora

[options]
zip_safe = False
python_requires = >=3.9
install_requires =
	jinja2
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    fora = fora.main:main
